# src/controllers/users.js
@@ -9,35 +9,61 @@ const users = new Router({
     prefix: '/users'
 });
 
-users.get('/', async function (ctx, next) {
-    await userModel.getAll().then(users => {
-        ctx.body = users;
-    });
+users.get('/', async (ctx, next) => {
+    await userModel.getAll().then(users => ctx.body = users);
 });
 
-users.get('/loginname/:loginName', async function (ctx, next) {
-    let loginname = ctx.params.loginName;
-    if (!!loginname) {
-        await userModel.getUserByLoginName(loginname).then(user => {
-            ctx.body = user;
-        }, () => {
-            ctx.body = `user ${loginname} not found!!`;
-        })
+users.delete('/:id', async (ctx, next) => {
+    let userID = ctx.params.id;
+    if (!!userID) {
+        await userModel.delete(userID).then(r => {
+            common.returnDone(ctx)
+        }).catch(err => {
+            return common.returnError(ctx, 500, 1001, err);
+        });
+        return;
     } else {
-        ctx.body = "error";
+        return common.returnError(ctx, 500, 1001, 'id不能为空');
     }
 });
 
-users.post('/registry', async function (ctx, next) {
+users.get('/:id', async (ctx, next) => {
+    let id = ctx.params.id;
+    if (!!id) {
+        let aa = await userModel.get(id).then(
+            user => {
+                delete user.password;
+                ctx.body = user;
+            },
+            () => common.returnError(ctx, 500, 1001, '用户ID不存在'))
+    } else {
+        common.returnError(ctx, 500, 1001, '参数错误')
+    }
+});
+
+users.get('/loginname/:loginName', async (ctx, next) => {
+    let loginName = ctx.params.loginName;
+    if (!!loginName) {
+        await userModel.getOneByKey({ loginName }).then(user => {
+            delete user.password;
+            ctx.body = user;
+        }, () => common.returnError(ctx, 500, 1001, '登录名不存在')
+        )
+    } else {
+        common.returnError(ctx, 500, 1001, '参数错误')
+    }
+});
+
+users.post('/registry', async (ctx, next) => {
     let user = ctx.request.body;
 
     const { loginName, nikeName, email, password } = user;
     if (!!!loginName || !!!email || !!!password) {
-        ctx.body = 'error';
+        common.returnError(ctx, 400, 1001, '参数错误')
         return;
     }
 
-    let existUser = await userModel.getUserByLoginName(loginName).then(user => {
+    let existUser = await userModel.getAll({ loginName }).then(user => {
         return user;
     });
 
@@ -47,9 +73,7 @@ users.post('/registry', async function (ctx, next) {
     }
 
     await userModel.save(user).then(result => {
-        ctx.body = 'done';
-    }, () => {
-
+        common.returnDone(ctx)
     });
 });
 
