# src/models/favoritesFolder.js
@@ -1,6 +1,6 @@
 let DBController = require('./lib/common');
 
-let config = { tableName: 'user' };
+let config = { tableName: 'favorites_folder' };
 let ffController = new DBController(config);
 
 module.exports = ffController;
