# src/routers/index.js
@@ -1,5 +1,7 @@
 const usersController = require('../controllers/users');
+const favoritesFolderController = require('../controllers/favoritesFolder');
 
 module.exports = (app) => {
-    app.use(usersController.routes());    
+    app.use(usersController.routes());
+    app.use(favoritesFolderController.routes());
 };
